<resources>
    <string name="app_name">Letsreview</string>
    <string name="full_name_placeholder">Full Name*</string>
    <string name="phone_number_placeholder">Phone Number</string>
    <string name="email_id_placeholder">Email Id*</string>
    <string name="sign_up">Sign up</string>
    <string name="password_placeholder">Password*</string>
    <string name="username_placeholder">Username*</string>
    <string name="submit">Submit</string>
    <string name="error_msg_valid_name">enter valid name</string>
    <string name="error_msg_valid_phone_no">enter valid phone number</string>
    <string name="error_msg_valid_email_id">enter valid email id</string>
    <string name="error_msg_valid_username">username should be between 8-30 characters and can only contain alphanumerics</string>
    <string name="error_msg_valid_password">password should be between 8-30 characters</string>
    <string name="sample_review">Novopay is a very good company. You get to interact with some very smart people there.
    Since they always work with latest technologies, you get to learn a lot</string>
    <string name="sample_rating">Rating: 3</string>
    <string name="sample_name">Saurabh Gupta</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="app_label">LetsReview</string>
    <string name="search_hint">search topics</string>
    <string name="preferences_file_key">com.project.letsreview.shared.preferences.file</string>
    <string name="session_token">sessionToken</string>
    <string name="username">username</string>
    <string name="next">NEXT</string>
    <string name="signup_successful_continue_login">User has been created successfully. Press next to continue</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="login">Login</string>
    <string name="topic">Topic</string>
    <string name="content">Content (Optional)</string>
    <string name="already_registered">Already Registered?</string>
    <string name="rating">Rating:</string>
    <string name="error_msg_valid_topic_name">enter valid topic name</string>
    <string name="error_msg_valid_review">review body must be between 1-5000 characters</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="logout">logout</string>
    <string name="server_address">serverAddress</string>
    <string name="create_review">Create Review</string>
    <string name="create_topic">Create Topic</string>
    <string name="name">Name</string>
    <string name="summary">Summary</string>
    <string name="description">Description (Optional)</string>
    <string name="summary_helper_text">2-3 words summary of the topic like An E-commerce company for Amazon</string>
    <string name="error_msg_valid_summary">summary must be between 1-64 characters</string>
    <string name="error_msg_valid_topic_description">topic description must be between 1-5000 characters</string>
    <string name="exit_message">Are you sure you want to exit current activity? All the content which you entered will be lost.</string>
    <string name="title_activity_first_sign_up">FirstSignUpActivity</string>
</resources>
