<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout


            android:id="@+id/activity_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/loginTextView"
                android:text="@string/login"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:clickable="true"
                android:paddingTop="16dp"
                android:id="@+id/no_account_yet_text_view"
                android:text="@string/no_account_yet"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.project.letsreview.components.EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:hint="@string/username_placeholder"
                android:gravity="center"
                style="@style/materialEditText"
                android:layout_marginTop="16dp"
                android:inputType="textPersonName"
                android:layout_height="wrap_content" />

            <com.project.letsreview.components.EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:gravity="center"
                android:inputType="textPassword"
                style="@style/materialEditText"
                android:hint="@string/password_placeholder"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_blue_light"
        android:text="@string/submit"/>

</RelativeLayout>

