<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.project.letsreview.components.EditText
                android:id="@+id/topic_name"
                android:layout_width="match_parent"
                android:hint="@string/topic"
                style="@style/materialEditText"
                android:layout_marginTop="16dp"
                android:inputType="textPersonName"
                android:layout_height="wrap_content" />

            <com.project.letsreview.components.EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:lines="5"
                style="@style/materialEditText"
                android:hint="@string/content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/rating"
                tools:text="Rating:"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:id="@+id/ratingBar"
                android:paddingTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srb_starSize="40dp"
                app:srb_numberOfStars="5"
                app:srb_rating="3"
                app:srb_stepSize="1.0"
                app:srb_borderColor="@color/colorPrimary"
                app:srb_fillColor="@color/colorPrimary"
                />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_blue_light"
        android:text="@string/submit"/>

</RelativeLayout>
